// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxSelection should render 1`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
        Array [
          "clear.all",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
      ],
    }
  }
>
  <div
    aria-label="translation"
    className="bx--list-box__selection"
    onClick={[Function]}
    role="button"
    tabIndex={-1}
    title="translation"
  >
    <ForwardRef(Close16)>
      <Icon
        fill="currentColor"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
          />
        </svg>
      </Icon>
    </ForwardRef(Close16)>
  </div>
</ListBoxSelection>
`;

exports[`ListBoxSelection should render 2`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  selectionCount={3}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
        Array [
          "clear.all",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
      ],
    }
  }
>
  <div
    className="bx--tag bx--tag--filter bx--tag--high-contrast"
  >
    <span
      className="bx--tag__label"
      title={3}
    >
      3
    </span>
    <div
      aria-label="translation"
      className="bx--tag__close-icon"
      onClick={[Function]}
      role="button"
      tabIndex={-1}
      title="translation"
    >
      <ForwardRef(Close16)>
        <Icon
          fill="currentColor"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
            />
          </svg>
        </Icon>
      </ForwardRef(Close16)>
    </div>
  </div>
</ListBoxSelection>
`;
